# g600

./: Cargo.toml  README.md
config/: default.yaml  ghub.yaml
src/: device.rs  hidkey.rs  main.rs  profile.rs  profilesio.rs
