[package]
name = "g600"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
enumset = { version = "1.1.5", features = ["serde"] }
hidraw = "0.0.7"
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.34"
static_assertions = "1.1.0"
